--- a/src/pages/get-the-loot/get-the-loot.html
+++ b/src/pages/get-the-loot/get-the-loot.html
@@ -8,8 +8,12 @@
 
   <ion-navbar>
     <ion-title>get-the-loot</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="logout()">
+        <ion-icon name="exit"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
 
