--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,14 +1,9 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>Login</ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
+<ion-content padding class="background">
+  <ion-card>
   <form #form="ngForm" (ngSubmit)="login(form.value)" novalidate>
     <ion-list>
       <ion-item>
-        <ion-label floating>Username</ion-label>
+        <ion-label floating style="color: #488aff">Username</ion-label>
         <ion-input type="text" name="username" ngModel required #username="ngModel"
                    [class.invalid]="username.errors && username.dirty"></ion-input>
       </ion-item>
@@ -17,7 +12,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-label floating>Password</ion-label>
+        <ion-label floating style="color: #488aff">Password</ion-label>
         <ion-input type="password" name="password" ngModel required #password="ngModel"
                    [class.invalid]="password.errors && password.dirty"></ion-input>
       </ion-item>
@@ -34,4 +29,5 @@
       </div>
     </ion-list>
   </form>
+  </ion-card>
 </ion-content>
